# projetolp

./: Cargo.toml  README.md  conteudo.txt.chunk0  package-lock.json  sample.torrent
frontend/: index.html  package-lock.json
frontend/src/: main.js
shared_file/: file1.txt  file2.txt
shared_files/: file1.txt  file2.txt
src/: chat.rs  file_utils.rs  main.rs  peer.rs  tracker.rs  tracker.rs.bak
uploads/: ghteste.txt
