[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"         # Framework para servidor HTTP
tokio = { version = "1", features = ["full"] }  # Runtime assíncrono
serde = { version = "1", features = ["derive"] } # Serialização de JSON
serde_json = "1.0"   # Manipulação de JSON
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP para comunicação com o Tracker
sha2 = "0.10"        # Biblioteca para calcular SHA-256
rand = "0.8"
futures = "0.3"

