[package]
name = "p2p_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] } # ✅ Habilita suporte a arquivos
tokio = { version = "1", features = ["full"] }  # Runtime assíncrono
serde = { version = "1", features = ["derive"] } # Serialização de JSON
serde_json = "1.0"   # Manipulação de JSON
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP para comunicação com o Tracker
sha2 = "0.10"        # Biblioteca para calcular SHA-256
rand = "0.8"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
rfd = "0.12" # Versão mais recente da Rust File Dialog
